@@ -44,6 +44,7 @@ Changelog
  * Fix: Mark up a few strings for translation (Luiz Boaretto)
  * Fix: Invalid focal_point attribute on image edit view (Michał (Quadric) Sieradzki)
  * Fix: No longer expose the `.delete()` method on the default Page.objects manager (Nick Smith)
+ * Fix: `exclude_fields_in_copy` on Page models will now work for for modelcluster parental / many to many relations (LB (Ben Johnston))
 
 
 2.8.1 (14.04.2020)
